--- a/les-1/index.html
+++ b/les-1/index.html
@@ -14,27 +14,31 @@
         }
 
         div.menu {
+            display: flex;
+        }
+        div.menu-iten-one {
 
-            margin: 0px;
+            margin: 5px;
             padding: 0px;
             width: 380px;
-            margin: 20px 0px;
-            padding: 5px;
             text-align: left;
 
             border: 2px solid saddlebrown;
             border-radius: 10px;
         }
 
+        div.menu-iten-two {
+            padding: 20px 10px;
+        }
+
         h1 {
             text-align: center;
         }
 
-        h4{
-            margin: 0px;
+        h4 {
+            margin: 5px;
             text-align: center;
         }
-
 
     </style>
 </head>
@@ -56,6 +60,7 @@
         вижила після Авада Кедавра і цим спричинила крах Лорда Волдеморта.</p>
 
     <div class="menu">
+        <div class="menu-iten-one">
         <h4>Зміст</h4>
 
         <ol>
@@ -77,9 +82,10 @@
             <li>Посилання</li>
 
         </ol>
-    </div>
-    <div class="image">
-        <img width="380" src="hp.jpg" alt="hp" >
+        </div>
+        <div class="menu-iten-two">
+            <img width="380" src="hp.jpg" alt="hp">
+        </div>
     </div>
 </div>
 
