--- a/les-2/hw2.html
+++ b/les-2/hw2.html
@@ -11,13 +11,7 @@
 <body>
 
 
-<div class="header">
-    <a href="https://uk.wikipedia.org/wiki">Головна сторінка</a>
-    <a href="https://uk.wikipedia.org/wiki">Головна сторінка</a>
-    <a href="https://uk.wikipedia.org/wiki">Головна сторінка</a>
-    <p>sdfsdf sdfsdfsdf sdfsdf s</p>
 
-</div>
 
 <div class="container">
 
@@ -28,21 +22,32 @@
 
         <div class="left-list">
             <ul class="left-list-ul">
-                <li><a href="#">Головна</a></li>
-                <li><a href="#">Поточні події</a></li>
-                <li><a href="#">Нові редагування</a></li>
-            </ul>
+                                    <li><a href="#">Головна</a></li>
+                                    <li><a href="#">Поточні події</a></li>
+                                    <li><a href="#">Нові редагування</a></li>
+                            </ul>
         </div>
-
-
     </div>
 
-    <div class="page">
 
+
+
+    <div class="page-body">
+        <div class="header">
+            <a href="https://uk.wikipedia.org/wiki">Головна сторінка</a>
+            <a href="https://uk.wikipedia.org/wiki">Головна сторінка</a>
+            <a href="https://uk.wikipedia.org/wiki">Головна сторінка</a>
+            <p>sdfsdf sdfsdfsdf sdfsdf s</p>
+        </div>
+
+    <div class="page-haed">
         <h1>Дюна (роман)</h1>
-        <hr>
-        <p>Матеріал з Вікіпедії — вільної енциклопедії.</p>
-        <p>У Вікіпедії є статті про інші значення цього терміна: Дюна (значення).</p>
+            <hr>
+            <p>Матеріал з Вікіпедії — вільної енциклопедії.</p>
+            <p>У Вікіпедії є статті про інші значення цього терміна: Дюна (значення).</p>
+    </div>
+        <div class="page-one">
+    <div class="page">
         <p>
             «<strong>Дю́на</strong>» (англ. Dune) — науково-фантастичний роман американського письменника Френка
             Герберта 1965 року, перший в низці з шести романів, що складають фантастичну сагу.
@@ -100,6 +105,8 @@
         </div>
 
 
+    </div>
+    </div>
     </div>
 
 </div>
