--- a/les-6.2/les-6.html
+++ b/les-6.2/les-6.html
@@ -17,7 +17,7 @@
 <div class="header">
     <div class="header__top wrapper">
         <div class="header__logo">
-            <img src="image/LOGO.svg" alt="logo">
+            <img src="image/LOGO.png" alt="logo">
         </div>
         <div class="header__menu">
             <div class="nav">
@@ -25,7 +25,7 @@
                 <div class="nav__item"><a href="#">Меню</a></div>
                 <div class="nav__item"><a href="#">Про нас</a></div>
                 <div class="nav__item"><a href="#">Бронювання</a></div>
-                <div class="nav__item"><img src="image/shopping-cart-solid.svg" alt="Shopping card"></div>
+                <div class="nav__item"><img src="image/cart.png" alt="Shopping card"></div>
             </div>
             <div class="header__contact">
                 <div class="header__phone">
