--- a/1-html/les-1/index.html
+++ b/1-html/les-1/index.html
@@ -19,7 +19,7 @@
         div.menu-iten-one {
 
             margin: 5px;
-            padding: 0px;
+            padding: 0;
             width: 380px;
             text-align: left;
 
