--- a/1-html/les-6.2/les-6.html
+++ b/1-html/les-6.2/les-6.html
@@ -30,8 +30,7 @@
             <div class="header__contact">
                 <div class="header__phone">
                     <img src="image/phone.png" alt="phone"> +999-888-76-54
-                    <p>Звяжитесь з нами для
-                        бронювания</p>
+                    <p>Звяжитесь з нами для бронювания</p>
                 </div>
                 <button class="header__button">Замовити столик</button>
             </div>
