--- a/2-jss/js-les-2/js-hw-2/js-hw-2.html
+++ b/2-jss/js-les-2/js-hw-2/js-hw-2.html
@@ -8,6 +8,204 @@
     <title>js-hw-2</title>
 </head>
 <body>
+<!-- - Дано змінну time яка рівна числу від 0 до 59. Потрібно написати код, який перевірить, до якої четверті години попадає число-->
+<!--(в першу, другу, третю или четверту частину години).-->
+
+
+<!-- - У змінній day дано якесь число від 1 до 31. Потрібно визначити, у яку половину(декаду) місяця потрапляє це число (у першу, другу чи третю).-->
+
+<!-- - У нас є змінна test, якщо  не дорівнює true, виведіть 'Вірно', інакше виведіть 'Неправильно'.-->
+<!--Перевірте роботу скрипта при test, що дорівнює true, false. Напишіть два варіанти скрипта - з коротким записом(тернаркою)-->
+
+
+<!-- - Якщо змінна a не дорівнює нулю, виведіть 'Вірно', інакше виведіть 'Невірно'. Перевірте  скрипт при a, що дорівнює 1, 0, -3-->
+
+<!-- - Скласти розклад на тиждень за домопоги switch. Користувач вводить порядковий номер дня тижня і на екрані відображається інфа що заплановано на цей день.-->
+
+<!-- - Потрібно визначити Високосний рік чи ні. Високосні роки діляться націло на 4.-->
+
+<!-- - Використовуючи конструкцію if..else, напишіть код, який запитуватиме: „Яка «офіційна» назва JavaScript?“-->
+<!--Якщо користувач вводить «ECMAScript», то показати: «Правильно!», інакше – відобразити: «Не знаєте? ECMAScript!-->
+
+<script>
+    // 1
+    //
+    // let time = +prompt('введіть число від 1 до 59');
+    //
+    // if (time <= 15) {
+    //     document.write('перша чверть')
+    // }
+    // else if (time >= 16 && time <= 30)
+    //  {
+    //     document.write('друга чверть')
+    // }
+    // else if (time >= 31 && time <= 45)
+    // {
+    //     document.write('третя чверть')
+    // }
+    // else if (time >= 46 && time <= 59)
+    // {
+    //     document.write('четверта чверть')
+    // }
+    // else if (time > 59)
+    // {
+    //     alert('Спробуй ще :)')
+    // }
+
+    // 2
+
+    // let time = +prompt('введіь день місяця');
+    // if (time <= 10) {
+    //     console.log('перша декада')
+    // }
+    // else if (time >= 11 && time <= 20){
+    //     console.log('друга декада')
+    // }
+    // else if (time >= 21 && time <= 31) {
+    //     console.log('третя декада')
+    // }
+    //
+    // else if (time > 31) {
+    //     console.log('спробуй ще')
+    // }
+
+
+    // 3
+    <!--- У нас є змінна test, що  не дорівнює true, виведіть 'Вірно', інакше виведіть 'Неправильно'.-->
+    <!--Перевірте роботу скрипта при test, що дорівнює true, false. Напишіть два варіанти скрипта - з коротким записом(тернаркою)-->
+
+    // let test = 'dfhfg';
+    // if (test === false) {
+    //     console.log('ВІРНО')
+    // } else {
+    //     console.log('НЕВІРНО')
+    // }
+
+
+    // 4
+    <!-- - Якщо змінна a не дорівнює нулю, виведіть 'Вірно', інакше виведіть 'Невірно'. Перевірте  скрипт при a, що дорівнює 1, 0, -3-->
+    // let a = +prompt('введіть число');
+    // if (a > 0) {
+    //     console.log('вірно')
+    // } else if (a <= 0) {
+    //     console.log('невірно')
+    // }
+
+    // 5
+    <!-- - Скласти розклад на тиждень за домопоги switch. Користувач вводить порядковий номер дня тижня і на екрані відображається інфа що заплановано на цей день.-->
+
+    // let day1 = {
+    //     one: 'Снідонок',
+    //     two: 'Ворк',
+    //     three: 'Обід',
+    //     four: 'Ворк',
+    //     five: 'Веченя',
+    //     six: 'Сон'
+    // }
+    //
+    // let day2 = {
+    //     one: 'Снідонок',
+    //     two: 'Ворк',
+    //     three: 'Обід',
+    //     four: 'Ворк',
+    //     five: 'Веченя',
+    //     six: 'Сон'
+    // }
+    //
+    // let day3 = {
+    //     one: 'Снідонок',
+    //     two: 'Ворк',
+    //     three: 'Обід',
+    //     four: 'Ворк',
+    //     five: 'Веченя',
+    //     six: 'Сон'
+    // }
+    //
+    // let day4 = {
+    //     one: 'Снідонок',
+    //     two: 'Ворк',
+    //     three: 'Обід',
+    //     four: 'Ворк',
+    //     five: 'Веченя',
+    //     six: 'Сон'
+    // }
+    //
+    // let day5 = {
+    //     one: 'Снідонок',
+    //     two: 'Ворк',
+    //     three: 'Обід',
+    //     four: 'Ворк',
+    //     five: 'Веченя',
+    //     six: 'Сон'
+    // }
+    //
+    // let day6 = {
+    //     one: 'Снідонок',
+    //     two: 'Обід',
+    //     three: 'Веченя',
+    //     four: 'Сон'
+    // }
+    //
+    // let day7 = {
+    //     one: 'Снідонок',
+    //     two: 'Обід',
+    //     three: 'Веченя',
+    //     four: 'Сон'
+    // }
+    //
+    // let day = +prompt('Введіть день, від 1 до 7');
+    // switch (day) {
+    //     case 1:
+    //         console.log(day1);
+    //         break;
+    //     case 2:
+    //         console.log(day2);
+    //         break;
+    //     case 3:
+    //         console.log(day3);
+    //         break;
+    //     case 4:
+    //         console.log(day4);
+    //         break;
+    //     case 5:
+    //         console.log(day5);
+    //         break;
+    //     case 6:
+    //         console.log(day6);
+    //         break;
+    //     case 7:
+    //         console.log(day7);
+    //         break
+    //     default:
+    //         console.log('спробуй ще');
+    // }
+
+    // 6
+    <!-- - Потрібно визначити Високосний рік чи ні. Високосні роки діляться націло на 4.-->
+
+    // let year = +prompt('Введіть рік');
+    // if(year % 4 === 0){
+    //     console.log('Рік ВИСОКОСНИЙ');
+    // }else {
+    //     console.log('УРА! Наш рік нормальний');
+    // }
+
+
+    <!-- - Використовуючи конструкцію if..else, напишіть код, який запитуватиме: „Яка «офіційна» назва JavaScript?“-->
+    <!--Якщо користувач вводить «ECMAScript», то показати: «Правильно!», інакше – відобразити: «Не знаєте? ECMAScript!-->
+
+    // let cod = prompt('Яка офіційна» назва JavaScript?');
+    // if ( cod === 'ECMAScript')
+    // {
+    //     console.log('Правильно!');
+    // }
+    // else {
+    //     console.log('Неправильно')
+    // }
+
+
+</script>
+
 
 </body>
 </html>
