--- a/2-jss/js-les-2/js-cw-2/js-cw-2.html
+++ b/2-jss/js-les-2/js-cw-2/js-cw-2.html
@@ -9,6 +9,133 @@
 </head>
 <body>
 
+<script>
+    // - Користувач вводить або має два числа.
+    //     Потрібно знайти та вивести максимальне число з тих двох .
+    //     Також потрібно врахувати коли введені рівні числа.
+
+    // let a = +prompt('Введіть перше число');
+    // let b = +prompt('Введіть друге число');
+
+    // if (a < b){
+    //     console.log(b);
+    // }
+    //
+    // else if ( a > b){
+    //     console.log(a);
+    // }
+    //
+    // else if (b > a){
+    //     console.log(a)
+    // }
+    //
+    // else if (b < a){
+    //     console.log(a);
+    // }
+    //
+    // else if (a === b) {
+    //     console.log('числа рівні')
+    // }
+
+    // or
+
+    // if (a < b || b > a) {
+    //     console.log(b);
+    // }
+    //
+    // else if ( a > b || b < a){
+    //     console.log(a);
+    // }
+    //
+    // else if (a === b) {
+    //     console.log('числа рівні')
+    // }
+
+
+    // - У першому під'їзді квартири з 1 до 20. У другому з 21 по 48. У третьому з 49 по 90.
+    // Користувач вводить номер квартири просто в змінні або через prompt('') .
+    //     Програма повинна зазначити, в якому під'їзді знаходиться дана квартира.
+
+    // let num = +prompt('Введіть номер квартири');
+    // if (num >= 1 && num <= 20) {
+    //     console.log('Підїзд 1');
+    // }
+    //
+    // else if (num >= 21 && num <= 48) {
+    //     console.log('Підїзд 2');
+    // }
+    //
+    // else if (num >= 49 && num <= 90) {
+    //     console.log('Підїзд 3');
+    // }
+    //
+    // else {
+    //     console.log('нема такого');
+    // }
+
+
+    // - Ми маємо змінну number в яку користувач задає числове значення,  якщо змінна рівна 10 вивести повідомлення ВІРНО, якщо змінна не рівна 10 - тоді НЕВІРНО
+
+    // let number = +prompt('Введіть число');
+    // if (number === 10) {
+    //     console.log('Вірно');
+    // }
+    // else {
+    //     console.log('Невірно');
+    // }
+
+
+    // - Ми маємо змінну x в яку користувач задає  значення,  якщо в змінну записане число, вивести 1,
+    //     якщо в змінну записали стрінгу вивести 2, якщо булеве значення - 3, якщо об'єкт або масив - 3.
+    // якщо в змінну записали щось інше, спрацьовує else
+
+
+    // let x = prompt('Введіть шось');
+    // if (x = m
+
+
+    // - Задача-гра "чи ми йдемо сьогодні в OKTEN на навчання?".
+    //     Змінна, яка характеризує температуру. Якщо температура від +10 до +22 вивести повідомлення що ми йдемо ВЧИТИСЯ .
+    //     Якщо інша темпаретура, тоді виводимо повідомлення що сидимо вдома і вчимося ОНЛАЙН
+
+    // let okten = +prompt('яка твоя температура?');
+    // if ( okten >= 10 && okten <= 22){
+    //     console.log('Йдем вчитичь');
+    // }
+    //
+    // else if ( okten < 10){
+    //     console.log('Добре поміряв?');
+    // }
+    //
+    // else {
+    //     console.log('вчимося ОНЛАЙН');
+    // }
+
+    // - За допомогою switch case - реалізувати гру - вікторину, де ми вводимо число від 1 до 5. І взалежності від введеного
+    //     числа нам дається приз. (Авто, Мото, Телефон, і т.д ) і якщо число не підходить тоді  вивести Повідомлення - що число не вірне ... .
+
+    // let key = +prompt('Введи число від 1 до 5');
+    // switch (key) {
+    //     case 1:
+    //         console.log("Машина");
+    //         break;
+    //     case 2:
+    //         console.log("Квартира");
+    //         break;
+    //     case 3:
+    //         console.log("Бублик");
+    //         break;
+    //     case 4:
+    //         console.log("Телефон");
+    //         break;
+    //     case 5:
+    //         console.log("Дирка від бублика");
+    //         break;
+    //     default:
+    //         console.log("Не вмієш грати");
+    // }
+
+</script>
 
 
 </body>
