--- a/v2/html/les4/c4-2/main.html
+++ b/v2/html/les4/c4-2/main.html
@@ -22,19 +22,19 @@
     </div>
 
     <div class="headerMed mainBoxSize2">
-        <div class="headerButL pad r20">
-            <div class=""></div>
+        <div class="headerMedL pad r20">
+            <div class="MedL"></div>
         </div>
-        <div class="headerButR pad">
+        <div class="headerMedR pad">
         <div class="hbox"></div>
         <div class="hbox"></div>
         <div class="hbox"></div>
         </div>
     </div>
 
-    <div class="headerBut mainBoxSize2">
+    <div class="headerBut mainBoxSize2 fCenter pad">
 
-        <div class="headerButA pad  ">
+        <div class="headerButA ">
         <h1>text</h1>
         <p>text</p>
         <div class="btn"></div>
@@ -43,7 +43,7 @@
 
 </div>
 
-    <div class="main">
+ <div class="mainA">
 
     <div class="mainBoxT mainBoxSize">
     <div class="top wh100 r20 border">
@@ -99,6 +99,27 @@
     </div>
 
     </div>
+
+<div class="mainB pad mainBoxSize2">
+    <div class="mainBTop fCenter">
+        <div class="mainBBoxT r20"></div>
+        <div class="mainBBoxT r20"></div>
+        <div class="mainBBoxT r20"></div>
+        <div class="mainBBoxT r20"></div>
+        <div class="mainBBoxT r20"></div>
+        <div class="mainBBoxT r20"></div>
+    </div>
+    <div class="mainBBut mainBoxSize2 fCenter">
+        <div class="mainBBoxB"></div>
+        <div class="mainBBoxB"></div>
+    </div>
+</div>
+
+<div class="footer pad fCenter">
+    <div class="footerBox"></div>
+    <div class="footerBox"></div>
+    <div class="footerBox"></div>
+</div>
 
 </div>
 
