--- a/v2/js/les1/hw/main.html
+++ b/v2/js/les1/hw/main.html
@@ -192,12 +192,22 @@
     //  let lastName = 'Олександрович'
     //
     //  let person = firstName + middleName + lastName;
+
+    // v2
+    // let firstName = prompt('Твоє імя?');
+    // let middleName = prompt('По-Батькові?');
+    // let age = prompt('Вік?');
     //
-    //  // prompt(firstName);
-    //  // prompt(middleName);
-    //  // prompt(lastName, 29);
+    // let person = firstName + middleName + age;
     //
-    //  prompt('Вітаю *Імя* *По батькові*. Тобі *вік* років');
+    // document.write(person);
+
+
+
+
+
+
+     // prompt('Вітаю *Імя* *По батькові*. Тобі *вік* років');
 
     // // 4 За допомогою оператора typeof визначити типи наступних змінних та вивести їх в консоль.
     // //     let a = 100; let b = '100'; let c = true;
@@ -242,12 +252,14 @@
 
     // // 6 Подумайте Какие значения выведет в окно браузера следующий фрагмент кода?  и почему?
     //
+
+    // v2
     // let str = "20";
     // let a = 5;
-    // document.write(str + a + "<br/>");
-    // document.write(str - a + "<br/>");
-    // document.write(str * "2" + "<br/>");
-    // document.write(str / 2 + "<br/>");
+    // document.write(str + a + "<br/>"); 205
+    // document.write(str - a + "<br/>"); 15
+    // document.write(str * "2" + "<br/>"); 40
+    // document.write(str / 2 + "<br/>"); 10
 
 
 </script>
