--- a/v2/js/les8/hw8/temp.html
+++ b/v2/js/les8/hw8/temp.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>temp</title>
 </head>
 <body>
+
+
 <p id="content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis cupiditate deleniti
     molestias mollitia pariatur porro saepe! Dolorem eaque earum eligendi, iste maxime molestias quam vitae.
     Dolore hic in quae sed.
@@ -28,6 +30,7 @@
 </ul>
 
 
+<script src="style.js"></script>
 
 </body>
 </html>
